# wishlist

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml
api/: router.py
bestwishes/: asgi.py  settings.py  urls.py  wsgi.py
betswishes/: asgi.py  settings.py  wsgi.py
core/: config.py
db/: session.py
gifts/: models.py  serializers.py  tests.py  urls.py  views.py
gifts/migrations/: 0001_initial.py
gifts/tests/integration/: test_gifts.py
users/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/integration/: test_users.py
users/tests/unit/: tests_users.py
wishlists/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
wishlists/migrations/: 0001_initial.py
